[package]
name = "tracepoints"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Guarracino <aguarra1@uthsc.edu>"]
license = "MIT"
description = "Compressed alignment representation"
repository = "https://github.com/AndreaGuarracino/tracepoints"
readme = "README.md"
keywords = ["bioinformatics", "alignment", "compression"]
categories = ["science"]

[dependencies]
#lib_wfa2 = { path = "/home/guarracino/Dropbox/git/lib_wfa2"}
lib_wfa2 = { git = "https://github.com/AndreaGuarracino/lib_wfa2", rev = "82e145b222b3503069e54d275bdb272e6d2a96c9"}
